<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">会办</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dai_shen_pi">DaiShenPiActivity</string>
    <string name="title_activity_cai_gou">CaiGouActivity</string>
    <string name="title_activity_shen_pi_ren">ShenPiRenActivity</string>
    <string name="title_activity_shenpiren">ShenpirenActivity</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="title_activity_detail_lian_xi_ren">DetailLianXiRenActivity</string>
    <string name="title_activity_shen_qing_fen_zu">ShenQingFenZuActivity</string>
    <string name="title_activity_dialog_fen_lei">DialogFenLeiActivity</string>
    <string name="title_activity_new_friend">NewFriendActivity</string>
    <string name="no_data">暂无数据</string>
    <string name="load_full">已加载全部</string>
    <string name="more">加载中</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="d">图片描述</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="title_activity_about_friend">AboutFriendActivity</string>
    <string name="title_activity_detail_person">DetailPersonActivity</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗？</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">暂不更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消更新</string>
    <string name="title_activity_add_yuan_gong">AddYuanGongActivity</string>
    <string name="title_activity_yi_jian">YiJianActivity</string>
    <string name="title_activity_chuang_jian">ChuangJianActivity</string>
    <string name="title_activity_guan_li_tuan_dui">GuanLiTuanDuiActivity</string>
    <string name="title_activity_set_guan_liyuan">SetGuanLIYuanActivity</string>
    <string name="title_activity_detail_tuan_dui">DetailTuanDuiActivity</string>
    <string name="title_activity_detail_cheng_yuan">DetailChengYuanActivity</string>
    <string name="title_activity_chuang_jian_tuan_dui">ChuangJianTuanDuiActivity</string>
    <string name="title_activity_jia_ru_tuan_dui">JiaRuTuanDuiActivity</string>
    <string name="title_activity_add_cheng_yuan">AddChengYuanActivity</string>
    <string name="title_activity_xiu_gai_cheng_yuan">XiuGaiChengYuanActivity</string>
    <string name="title_activity_tuan_dui_guan_li">TuanDuiGuanLiActivity</string>
    <string name="title_activity_sou_suo_tuan_dui">SouSuoTuanDuiActivity</string>
    <string name="title_activity_detail_gong_gao">DetailGongGaoActivity</string>
    <string name="title_activity_add_gong_gao">AddGongGaoActivity</string>
    <string name="title_activity_add_work">AddWorkActivity</string>
    <string name="title_activity_work_circle">WorkCircleActivity</string>
    <string name="title_activity_send_msg">SendMsgActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail_map">DetailMapActivity</string>
    <string name="title_activity_notice_read_un_read">NoticeReadUnReadActivity</string>
    <string name="title_activity_main_sliding_menu">MainSlidingMenuActivity</string>
    <string name="title_activity_wifi_clock">WifiClockActivity</string>
    <string name="title_activity_add_shop">AddShopActivity</string>
    <string name="title_activity_my_shop">MyShopActivity</string>
    <string name="title_activity_friend_info">FriendInfo</string>
    <string name="type_qingjia">请假类型</string>
    <string name="shenpi_kaishi">开始时间</string>
    <string name="shenpi_jieshu">结束时间</string>
    <string name="shenpi_tianshu">请假时长</string>
    <string name="shenpi_shiyou">请假事由</string>
    <string name="title_activity_release_task">ReleaseTask</string>
    <string name="title_activity_task_info">TaskInfoActivity</string>
    <string name="title_activity_selector_team">SelectorTeamActivity</string>
    <string name="title_activity_wo_de_task">WoDeTaskActivity</string>

    <string name="tribe_check_mode">身份验证</string>
    <string name="no_verification">允许任何人加入</string>
    <string name="pwd_verification">需要密码</string>
    <string name="id_verification">需要身份验证</string>
    <string name="nobody_join">不允许任何人主动加入群</string>
    <string name="set_tribe_pwd">设置群密码</string>
    <string name="set_tribe_pwd_desc">密码必须由6-20个英文字母或数字(0-9)组成，区分大小写</string>
    <string name="input_tribe_pwd">请输入密码</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <string name="style_hint">style为数字</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="title_activity_ren_wu_detail">RenWuDetailActivity</string>
    <string name="title_activity_release__fan_kui">Release_FanKuiActivity</string>
    <string name="title_activity_person_center">PersonCenterActivity</string>

    <string name="app_tip">提示</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
</resources>